--- a/BA820_G15_Final.ipynb
+++ b/BA820_G15_Final.ipynb
@@ -4,7 +4,6 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMPA6bPa5JtcHx5nxyybiSG",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,7 +27,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {
         "id": "NlhQNy11xRx0"
       },
@@ -36,6 +35,15 @@
       "source": [
         "#Test"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "New\n"
+      ],
+      "metadata": {
+        "id": "ISJaikAI2oJt"
+      }
     }
   ]
 }
