--- a/BA820_G15_Final.ipynb
+++ b/BA820_G15_Final.ipynb
@@ -27,23 +27,133 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 1,
       "metadata": {
-        "id": "NlhQNy11xRx0"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "F_ztJiKINOJ9",
+        "outputId": "4675a4a5-6693-48f8-80e7-de36303dcade"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Collecting opendatasets\n",
+            "  Downloading opendatasets-0.1.22-py3-none-any.whl (15 kB)\n",
+            "Requirement already satisfied: tqdm in /usr/local/lib/python3.10/dist-packages (from opendatasets) (4.66.2)\n",
+            "Requirement already satisfied: kaggle in /usr/local/lib/python3.10/dist-packages (from opendatasets) (1.5.16)\n",
+            "Requirement already satisfied: click in /usr/local/lib/python3.10/dist-packages (from opendatasets) (8.1.7)\n",
+            "Requirement already satisfied: six>=1.10 in /usr/local/lib/python3.10/dist-packages (from kaggle->opendatasets) (1.16.0)\n",
+            "Requirement already satisfied: certifi in /usr/local/lib/python3.10/dist-packages (from kaggle->opendatasets) (2024.2.2)\n",
+            "Requirement already satisfied: python-dateutil in /usr/local/lib/python3.10/dist-packages (from kaggle->opendatasets) (2.8.2)\n",
+            "Requirement already satisfied: requests in /usr/local/lib/python3.10/dist-packages (from kaggle->opendatasets) (2.31.0)\n",
+            "Requirement already satisfied: python-slugify in /usr/local/lib/python3.10/dist-packages (from kaggle->opendatasets) (8.0.4)\n",
+            "Requirement already satisfied: urllib3 in /usr/local/lib/python3.10/dist-packages (from kaggle->opendatasets) (2.0.7)\n",
+            "Requirement already satisfied: bleach in /usr/local/lib/python3.10/dist-packages (from kaggle->opendatasets) (6.1.0)\n",
+            "Requirement already satisfied: webencodings in /usr/local/lib/python3.10/dist-packages (from bleach->kaggle->opendatasets) (0.5.1)\n",
+            "Requirement already satisfied: text-unidecode>=1.3 in /usr/local/lib/python3.10/dist-packages (from python-slugify->kaggle->opendatasets) (1.3)\n",
+            "Requirement already satisfied: charset-normalizer<4,>=2 in /usr/local/lib/python3.10/dist-packages (from requests->kaggle->opendatasets) (3.3.2)\n",
+            "Requirement already satisfied: idna<4,>=2.5 in /usr/local/lib/python3.10/dist-packages (from requests->kaggle->opendatasets) (3.6)\n",
+            "Installing collected packages: opendatasets\n",
+            "Successfully installed opendatasets-0.1.22\n"
+          ]
+        }
+      ],
       "source": [
-        "#Test"
+        "!pip install opendatasets"
       ]
     },
     {
-      "cell_type": "markdown",
+      "cell_type": "code",
       "source": [
-        "New\n"
+        "import opendatasets as od\n",
+        "import pandas as pd\n",
+        "import numpy as np\n",
+        "import missingno as msno\n",
+        "import os\n",
+        "import re\n",
+        "import nltk\n",
+        "from nltk.tokenize import word_tokenize\n",
+        "import string\n",
+        "from sklearn.feature_extraction.text import CountVectorizer\n",
+        "from sklearn.feature_extraction.text import CountVectorizer, ENGLISH_STOP_WORDS\n",
+        "from matplotlib import pyplot as plt\n",
+        "import seaborn as sns\n",
+        "from sklearn.cluster import KMeans\n",
+        "import plotly.express as px\n",
+        "from sklearn.preprocessing import StandardScaler\n",
+        "from scipy.cluster.hierarchy import linkage, fcluster\n",
+        "from sklearn.metrics import pairwise_distances\n",
+        "from sklearn.decomposition import PCA\n",
+        "from nltk.tokenize import sent_tokenize\n",
+        "from wordcloud import WordCloud\n",
+        "from nltk.sentiment import SentimentIntensityAnalyzer\n",
+        "import gensim.downloader as api\n",
+        "from sklearn.preprocessing import StandardScaler\n",
+        "\n",
+        "import warnings\n",
+        "\n",
+        "warnings.filterwarnings(\"ignore\", category=DeprecationWarning)\n",
+        "warnings.filterwarnings(\"ignore\", category=FutureWarning, message=\"The default value of `n_init` will change from 10 to 'auto' in 1.4. Set the value of `n_init` explicitly to suppress the warning\")\n",
+        "\n",
+        "# Coded by Himani"
       ],
       "metadata": {
-        "id": "ISJaikAI2oJt"
-      }
+        "id": "PzSPFPznN9m_"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "od.download(\n",
+        "    \"https://www.kaggle.com/datasets/deepshah16/song-lyrics-dataset\")\n",
+        "\n",
+        "#Coded by Himani"
+      ],
+      "metadata": {
+        "id": "HbWIRtSvN5A2",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "79cc74f4-b786-4950-a9ef-4c9016bc4186"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Downloading song-lyrics-dataset.zip to ./song-lyrics-dataset\n"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "100%|██████████| 19.9M/19.9M [00:01<00:00, 19.2MB/s]\n"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "h6rhmQBY5eaf"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
