--- a/BA820_G15_Final.ipynb
+++ b/BA820_G15_Final.ipynb
@@ -27,7 +27,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -148,9 +148,61 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "directory = '/content/song-lyrics-dataset/csv/'\n",
+        "dfs = []\n",
+        "for filename in os.listdir(directory):\n",
+        "    if filename.endswith(\".csv\"):\n",
+        "        filepath = os.path.join(directory, filename)\n",
+        "        df = pd.read_csv(filepath)\n",
+        "        dfs.append(df)\n",
+        "\n",
+        "df_concat = pd.concat(dfs, ignore_index=True)\n",
+        "df_concat\n",
+        "\n",
+        "#Coded by Madhumitha"
+      ],
       "metadata": {
         "id": "h6rhmQBY5eaf"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "df=df_concat\n",
+        "df.to_excel('df_concat.xlsx', index=False)\n",
+        "\n",
+        "#Coded by Madhumitha"
+      ],
+      "metadata": {
+        "id": "3r6ILk2K6Bvo"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "df.info()\n",
+        "\n",
+        "#Coded by Madhumitha"
+      ],
+      "metadata": {
+        "id": "DiXNz6iD6D2P"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "df.head()\n",
+        "#Coded by Madhumitha"
+      ],
+      "metadata": {
+        "id": "0pQ30C7C6FwK"
       },
       "execution_count": null,
       "outputs": []
