--- a/BA820_G15_Final.ipynb
+++ b/BA820_G15_Final.ipynb
@@ -612,6 +612,15 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "#1.1 Null Handling"
+      ],
+      "metadata": {
+        "id": "OGkJT9nSGB61"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "df_cleaned.isna().sum()\n",
@@ -644,6 +653,68 @@
           "execution_count": 10
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "plt.figure(figsize=(10, 8))\n",
+        "msno.matrix(df_cleaned, figsize=(10, 6), fontsize=12, sparkline=False, labels=True)\n",
+        "\n",
+        "plt.title('Figure 1.1 Missing Values Matrix', fontsize=16)\n",
+        "plt.xticks(rotation=90, ha='right')\n",
+        "plt.yticks(fontsize=12)\n",
+        "plt.xlabel('Features', fontsize=14)\n",
+        "plt.ylabel('Entries', fontsize=14)\n",
+        "plt.tight_layout()\n",
+        "plt.show()\n",
+        "\n",
+        "#Coded by Madhumitha"
+      ],
+      "metadata": {
+        "id": "DkSOIiDcGEJj"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "unique_artist =df_cleaned['Artist'].unique()\n",
+        "unique_artist\n",
+        "\n",
+        "num_unique = len(unique_artist)\n",
+        "print(\"Number of Unique Artists:\",num_unique)\n",
+        "\n",
+        "#Coded by Madhumitha"
+      ],
+      "metadata": {
+        "id": "Od1oPqGSGGgk"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "df_null = df_cleaned[['Artist','Album','Year', 'Date', 'Lyric']]\n",
+        "\n",
+        "tot_artist = df_cleaned['Artist'].value_counts()\n",
+        "null_year_percentage = (df_null[df_null['Year'].isna()].groupby('Artist').size() * 100 / tot_artist).rename('Artist_Year%')\n",
+        "null_date_percentage = (df_null[df_null['Date'].isna()].groupby('Artist').size() * 100 / tot_artist).rename('Artist_Date%')\n",
+        "null_album_percentage = (df_null[df_null['Album'].isna()].groupby('Artist').size() * 100 / tot_artist).rename('Artist_Album%')\n",
+        "null_lyric_percentage = (df_null[df_null['Lyric'].isna()].groupby('Artist').size() * 100 / tot_artist).rename('Artist_Lyric%')\n",
+        "\n",
+        "df_null = pd.concat([null_year_percentage, null_date_percentage, null_album_percentage, null_lyric_percentage], axis=1)\n",
+        "df_null.reset_index(inplace=True)\n",
+        "df_null\n",
+        "\n",
+        "#Coded by Himani"
+      ],
+      "metadata": {
+        "id": "lqnpMuHnGIPQ"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
