--- a/BA820_G15_Final.ipynb
+++ b/BA820_G15_Final.ipynb
@@ -715,6 +715,39 @@
       },
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "plt.figure(figsize=(20, 6))\n",
+        "\n",
+        "df_null_sort=df_null.sort_values(by='Artist_Lyric%', ascending = False).reset_index()\n",
+        "\n",
+        "sns.barplot(x='index', y='Artist_Lyric%', data=df_null_sort)\n",
+        "\n",
+        "plt.xlabel('Artist', fontsize=12)\n",
+        "plt.ylabel('%null', fontsize=12)\n",
+        "plt.title('Figure 1. 2 Null Values of Lyrics by Artist', fontsize=14)\n",
+        "plt.xticks(rotation=90)\n",
+        "plt.tight_layout()\n",
+        "plt.show()\n",
+        "\n",
+        "#Coded by Himani"
+      ],
+      "metadata": {
+        "id": "OK0X_TUaIBM0"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "qQ4oQCOMIJbg"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
