--- a/BA820_G15_Final.ipynb
+++ b/BA820_G15_Final.ipynb
@@ -694,6 +694,15 @@
       "outputs": []
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "##1.2 Null Values by Lyrics for Artist"
+      ],
+      "metadata": {
+        "id": "T5MGq3jEIu5Z"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "df_null = df_cleaned[['Artist','Album','Year', 'Date', 'Lyric']]\n",
@@ -717,37 +726,96 @@
       "outputs": []
     },
     {
-      "cell_type": "code",
+      "cell_type": "markdown",
       "source": [
-        "plt.figure(figsize=(20, 6))\n",
-        "\n",
-        "df_null_sort=df_null.sort_values(by='Artist_Lyric%', ascending = False).reset_index()\n",
-        "\n",
-        "sns.barplot(x='index', y='Artist_Lyric%', data=df_null_sort)\n",
-        "\n",
-        "plt.xlabel('Artist', fontsize=12)\n",
-        "plt.ylabel('%null', fontsize=12)\n",
-        "plt.title('Figure 1. 2 Null Values of Lyrics by Artist', fontsize=14)\n",
-        "plt.xticks(rotation=90)\n",
-        "plt.tight_layout()\n",
-        "plt.show()\n",
-        "\n",
-        "#Coded by Himani"
+        "##1.3 Null Values of Year and Album for Artist"
       ],
       "metadata": {
-        "id": "OK0X_TUaIBM0"
+        "id": "1rAsy2HrIzoy"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "pivot_table = pd.pivot_table(df_null, index='index', values=['Artist_Year%', 'Artist_Album%'])\n",
+        "pivot_table.reset_index(inplace=True)\n",
+        "df_melt = pivot_table.melt(id_vars='index', var_name='Value', value_name='Null Percentage')\n",
+        "\n",
+        "plt.figure(figsize=(12, 6))\n",
+        "sns.barplot(x='index', y='Null Percentage', hue='Value', data=df_melt, palette='Blues')\n",
+        "\n",
+        "plt.xlabel('Artist', fontsize=12)\n",
+        "plt.ylabel('Null Values%', fontsize=12)\n",
+        "plt.title('Figure 1.3 Null Values of Album and Year for Artists', fontsize=14)\n",
+        "plt.xticks(rotation=90)\n",
+        "plt.legend(title=None)\n",
+        "plt.show()\n",
+        "\n",
+        "#Coded by Madhumitha"
+      ],
+      "metadata": {
+        "id": "mw6YJcV3IvlY"
       },
       "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "df_melt\n",
+        "#Coded by Madhumitha"
+      ],
       "metadata": {
-        "id": "qQ4oQCOMIJbg"
+        "id": "X9NEoMqbI2Oq"
       },
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "df_cleaned=df_cleaned.drop(columns=['Album','Year','Date'], axis=1)\n",
+        "df_cleaned=df_cleaned.dropna()\n",
+        "\n",
+        "cleaned_summary = {\n",
+        "    'Initial Rows': df.shape[0],\n",
+        "    'Final Rows': df_cleaned.shape[0],\n",
+        "    'Rows Removed': df.shape[0] - df_cleaned.shape[0]\n",
+        "}\n",
+        "\n",
+        "print(cleaned_summary)\n",
+        "\n",
+        "#Coded by Madhumitha"
+      ],
+      "metadata": {
+        "id": "FCwVXxuqI4WE"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "duplicate_rows = df_cleaned[df_cleaned.duplicated()]\n",
+        "print(\"Duplicate rows:\")\n",
+        "duplicate_rows\n",
+        "\n",
+        "#Coded by Himani"
+      ],
+      "metadata": {
+        "id": "c4HbpKZAI6jO"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "#2. Exploratory Data Analysis"
+      ],
+      "metadata": {
+        "id": "ZeXT9BLYI83d"
+      }
     }
   ]
 }
