--- a/BA820_G15_Final.ipynb
+++ b/BA820_G15_Final.ipynb
@@ -816,6 +816,21 @@
       "metadata": {
         "id": "ZeXT9BLYI83d"
       }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "df_punkt=df_cleaned.copy()\n",
+        "df_punkt['punctuation_count'] = df_punkt['Lyric'].apply(lambda x: len(re.findall(r'[^\\w\\s]', x)))\n",
+        "df_punkt\n",
+        "\n",
+        "#Coded by Shailoz"
+      ],
+      "metadata": {
+        "id": "NJLpqAWLKOyo"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
