--- a/BA820_G15_Final.ipynb
+++ b/BA820_G15_Final.ipynb
@@ -831,6 +831,82 @@
       },
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "##2.1 Length of lyrics"
+      ],
+      "metadata": {
+        "id": "QSGIatGfK-9g"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "df_cleaned['Lyrics_len']=df_cleaned['Lyric'].apply(lambda x: len(str(x).split()))\n",
+        "\n",
+        "#Coded by Madhumitha"
+      ],
+      "metadata": {
+        "id": "SKhB73feK8R-"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "df_len=df_cleaned.copy()\n",
+        "df_len= df_len.groupby('Artist')['Lyrics_len'].mean().reset_index()\n",
+        "df_len['Lyrics_len'] = df_len['Lyrics_len'].round(0)\n",
+        "df_len.head(5)\n",
+        "\n",
+        "#Coded by Madhumitha"
+      ],
+      "metadata": {
+        "id": "Pw1EfL1GLB1n"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "df_len\n",
+        "#Coded by Madhumitha"
+      ],
+      "metadata": {
+        "id": "ryeCA1YvLDga"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "df_len=df_len.sort_values(by='Lyrics_len', ascending=False).reset_index()\n",
+        "\n",
+        "plt.figure(figsize=(20, 6))\n",
+        "sns.barplot(x='Artist', y='Lyrics_len', data=df_len)\n",
+        "\n",
+        "for index, row in df_len.iterrows():\n",
+        "    plt.text(index, row['Lyrics_len'], row['Lyrics_len'], color='black', ha=\"center\")\n",
+        "\n",
+        "plt.xlabel('Artist', fontsize=14)\n",
+        "plt.ylabel('Lyrics Length', fontsize=14)\n",
+        "plt.title('Figure 2.1 Average Lyrics Length by Artist', fontsize=16)\n",
+        "plt.xticks(rotation=90)\n",
+        "plt.tight_layout()\n",
+        "plt.show()\n",
+        "\n",
+        "#Coded by Madhumitha"
+      ],
+      "metadata": {
+        "id": "4JfjovBvLKB2"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
