--- a/BA820_G15_Final.ipynb
+++ b/BA820_G15_Final.ipynb
@@ -907,6 +907,94 @@
       },
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "##2.2 Unique Words Percentage by each Artist"
+      ],
+      "metadata": {
+        "id": "lBjVa8JdMXWh"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "unqiue_words_artist = {}\n",
+        "tot_words_artist={}\n",
+        "df_grp = df_cleaned.groupby('Artist')\n",
+        "\n",
+        "for artist, df_grp in df_grp:\n",
+        "    lyrics_all = ' '.join(df_grp['Lyric'].astype(str))\n",
+        "    words = lyrics_all.lower().split()\n",
+        "    tot_words = len(words)\n",
+        "    tot_words_artist[artist] = tot_words\n",
+        "    unique_words = set(words)\n",
+        "    unqiue_words_artist[artist] = unique_words\n",
+        "\n",
+        "    #Coded by Shailoz"
+      ],
+      "metadata": {
+        "id": "ETDDRvQJMW6g"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "df_unique_words = {\n",
+        "    'Artist': [artist for artist in unqiue_words_artist.keys()],\n",
+        "    'Unique_Words': [len(unique_words) for unique_words in unqiue_words_artist.values()],\n",
+        "    'Total_Words': [tot_words_artist[artist] for artist in tot_words_artist.keys()]\n",
+        "}\n",
+        "df_unique_words = pd.DataFrame(df_unique_words)\n",
+        "df_unique_words\n",
+        "\n",
+        "#Coded by Shailoz"
+      ],
+      "metadata": {
+        "id": "jFKz6YSnMbLs"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "df_unique_words['Percentage_words']=df_unique_words['Unique_Words']*100/df_unique_words['Total_Words']\n",
+        "df_unique_words['Percentage_words']=df_unique_words['Percentage_words'].round(2)"
+      ],
+      "metadata": {
+        "id": "in24gFCBMc6f"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "plt.figure(figsize=(12, 6))\n",
+        "sns.barplot(x='Artist', y='Percentage_words', data=df_unique_words, palette='Blues')\n",
+        "\n",
+        "for index, row in df_unique_words.iterrows():\n",
+        "    plt.text(index, row['Percentage_words'], f\"{row['Percentage_words']:.2f}%\", color='black', ha='center')\n",
+        "\n",
+        "plt.xlabel('Artist', fontsize=12)\n",
+        "plt.ylabel('Count', fontsize=12)\n",
+        "plt.title('Figure 2.2 Unique Words Percentage by each Artist', fontsize=14)\n",
+        "plt.xticks(rotation=90)\n",
+        "plt.legend(title=None)\n",
+        "plt.tight_layout()\n",
+        "plt.show()\n",
+        "\n",
+        "#Coded by Shailoz"
+      ],
+      "metadata": {
+        "id": "vBA-Ri_VMezX"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
