--- a/BA820_G15_Final.ipynb
+++ b/BA820_G15_Final.ipynb
@@ -995,6 +995,295 @@
       },
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# 2.3 Word Tokenization"
+      ],
+      "metadata": {
+        "id": "MUK3ySYxPoOH"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "!pip install nltk\n",
+        "#Coded by Prudhvi"
+      ],
+      "metadata": {
+        "id": "pxCCGzrXPn6y"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "nltk.download('punkt')\n",
+        "#Coded by Prudhvi"
+      ],
+      "metadata": {
+        "id": "kcwvfHoNPyAo"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "df_cleaned['Lyric'] = df_cleaned['Lyric'].astype(str)\n",
+        "df_cleaned['Tokenized_Lyric'] = df_cleaned['Lyric'].apply(lambda x: word_tokenize(x))\n",
+        "df_cleaned[['Lyric', 'Tokenized_Lyric']]\n",
+        "\n",
+        "#Coded by Prudhvi"
+      ],
+      "metadata": {
+        "id": "WkqUUHToP0Sg"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "df_cleaned['Tokenized_Lyric_String'] = df_cleaned['Tokenized_Lyric'].apply(lambda x: ' '.join(x))\n",
+        "vectorizer = CountVectorizer()\n",
+        "#Coded by Prudhvi"
+      ],
+      "metadata": {
+        "id": "7XSCCB2HP2fe"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "X = vectorizer.fit_transform(df_cleaned['Tokenized_Lyric_String'])\n",
+        "df_vectorizer = pd.DataFrame(X.toarray(), columns=vectorizer.get_feature_names_out())\n",
+        "#Coded by Prudhvi"
+      ],
+      "metadata": {
+        "id": "8_id70LGP4si"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "df_vectorizer.head(3)\n",
+        "#Coded by Prudhvi"
+      ],
+      "metadata": {
+        "id": "QZXcJn0SP6gP"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "2.3 Stop Words"
+      ],
+      "metadata": {
+        "id": "vlKIqQIBQC1Y"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "df_cleaned['Tokenized_Lyric'] = df_cleaned['Lyric'].apply(lambda x: x.lower().split())\n",
+        "\n",
+        "stop_words = set(ENGLISH_STOP_WORDS)\n",
+        "df_cleaned['Tokenized_Lyric'] = df_cleaned['Tokenized_Lyric'].apply(lambda x: [word for word in x if word not in stop_words])\n",
+        "\n",
+        "#Coded by Himani"
+      ],
+      "metadata": {
+        "id": "u4O4YFiKP8Vo"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "df_cleaned['Tokenized_Lyric_String'] = df_cleaned['Tokenized_Lyric'].apply(lambda x: ' '.join(x))\n",
+        "vectorizer_stop = CountVectorizer(stop_words='english')\n",
+        "\n",
+        "X = vectorizer_stop.fit_transform(df_cleaned['Tokenized_Lyric_String'])\n",
+        "vectorized_df_cleaned = pd.DataFrame(X.toarray(), columns=vectorizer_stop.get_feature_names_out())\n",
+        "\n",
+        "#Coded by Himani"
+      ],
+      "metadata": {
+        "id": "RMy8lt9iQF0w"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(\"The number of stop words removed:\", (df_vectorizer.shape[1]-vectorized_df_cleaned.shape[1]))\n",
+        "\n",
+        "#Coded by Himani"
+      ],
+      "metadata": {
+        "id": "JYsjaSAOQH3Y"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Though we have 55K words, we also are aware that there could be stop words. So we set to remove the stop words to enhance our text processing better. We see that we have close to 300 stop words present in the data set which were removed."
+      ],
+      "metadata": {
+        "id": "ctr_soLzQKNq"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# 2.4 Sentence Tokenization"
+      ],
+      "metadata": {
+        "id": "5Nkgk5vKQP69"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "df_cleaned['Tokenized_Sent_Lyric'] = df_cleaned['Lyric'].apply(lambda x: sent_tokenize(x))\n",
+        "df_cleaned\n",
+        "#Coded by Prudhvi"
+      ],
+      "metadata": {
+        "id": "lU-FCvHcQMQC"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "df_cleaned['Num_Sentences'] = df_cleaned['Tokenized_Sent_Lyric'].apply(len)\n",
+        "art_sent_cnt = df_cleaned.groupby('Artist')['Num_Sentences'].sum().reset_index()\n",
+        "\n",
+        "art_sent_cnt\n",
+        "#Coded by Prudhvi"
+      ],
+      "metadata": {
+        "id": "oS7cLjYPQSp0"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "art_word_cnt = df_cleaned.groupby('Artist')['Lyrics_len'].sum().reset_index()\n",
+        "art_sent_word_cnt = pd.merge(art_sent_cnt, art_word_cnt, on='Artist')\n",
+        "art_sent_word_cnt['Avg_Words_Per_Sentence'] = art_sent_word_cnt['Lyrics_len'] / art_sent_word_cnt['Num_Sentences']\n",
+        "#Coded by Prudhvi"
+      ],
+      "metadata": {
+        "id": "Pfh6PqhdQVQN"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "avg_all = art_sent_word_cnt['Avg_Words_Per_Sentence'].mean()\n",
+        "\n",
+        "plt.figure(figsize=(12, 6))\n",
+        "sns.barplot(x='Artist', y='Avg_Words_Per_Sentence', data=art_sent_word_cnt, palette='Blues', label='Artist')\n",
+        "plt.axhline(avg_all, color='red', linestyle='--', label='Overall Average')\n",
+        "plt.xlabel('Artist', fontsize=12)\n",
+        "plt.ylabel('Average Words Per Sentence', fontsize=12)\n",
+        "plt.title('Figure 2.4 Average Words Per Sentence by Artist', fontsize=14)\n",
+        "plt.xticks(rotation=90)\n",
+        "plt.show()\n",
+        "#Coded by Prudhvi"
+      ],
+      "metadata": {
+        "id": "SQDkC3I8QYjV"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# 2.5 Most Popular Words by Artist"
+      ],
+      "metadata": {
+        "id": "g4D9pdNoQdOe"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "vectorized_df_cleaned['Artist'] = df_cleaned['Artist']\n",
+        "\n",
+        "artist_word_counts = vectorized_df_cleaned.groupby('Artist').sum()\n",
+        "\n",
+        "most_popular_words_by_artist = {}\n",
+        "for artist, word_counts in artist_word_counts.iterrows():\n",
+        "    most_popular_words = word_counts.sort_values(ascending=False).index[:5]\n",
+        "    most_popular_words_by_artist[artist] = most_popular_words.tolist()\n",
+        "\n",
+        "most_popular_words_by_artist\n",
+        "#Coded by Prudhvi"
+      ],
+      "metadata": {
+        "id": "8WAHdsSNQeT4"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "df_output = pd.DataFrame.from_dict(most_popular_words_by_artist, orient='index', columns=['Word 1', 'Word 2', 'Word 3', 'Word 4', 'Word 5'])\n",
+        "print(df_output)\n",
+        "#Coded by Prudhvi"
+      ],
+      "metadata": {
+        "id": "xoh2H_gaQgi6"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "vectorized_df_cleaned['Artist'] = df_cleaned['Artist']\n",
+        "\n",
+        "artist_word_counts = vectorized_df_cleaned.groupby('Artist').sum()\n",
+        "\n",
+        "most_popular_words_by_artist_100 = {}\n",
+        "for artist, word_counts in artist_word_counts.iterrows():\n",
+        "    most_popular_words = word_counts.sort_values(ascending=False).index[:100]\n",
+        "    most_popular_words_by_artist_100[artist] = most_popular_words.tolist()\n",
+        "\n",
+        "most_popular_words_by_artist_100\n",
+        "\n",
+        "df_output_100 = pd.DataFrame.from_dict(most_popular_words_by_artist_100, orient='index')\n",
+        "df_output_100\n",
+        "#Coded by Prudhvi"
+      ],
+      "metadata": {
+        "id": "RED8eE8iQiMP"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
