--- a/BA820_G15_Final.ipynb
+++ b/BA820_G15_Final.ipynb
@@ -1284,6 +1284,27 @@
       },
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "all_words = ' '.join([' '.join(words) for words in most_popular_words_by_artist_100.values()])\n",
+        "\n",
+        "wordcloud = WordCloud(width=800, height=400, background_color='white').generate(all_words)\n",
+        "\n",
+        "plt.figure(figsize=(10, 5))\n",
+        "plt.imshow(wordcloud, interpolation='bilinear')\n",
+        "plt.axis('off')\n",
+        "plt.title('Word Cloud for Most Popular Words Across All Artists')\n",
+        "plt.show()\n",
+        "\n",
+        "#Coded by Shailoz"
+      ],
+      "metadata": {
+        "id": "KIbQOdubRu__"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
