--- a/BA820_G15_Final.ipynb
+++ b/BA820_G15_Final.ipynb
@@ -1305,6 +1305,75 @@
       },
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# 2.6 Dimensionality Reduction"
+      ],
+      "metadata": {
+        "id": "Ecc3-MlkS5Pv"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "pca = PCA(n_components=160)\n",
+        "df_vect_pca=pca.fit_transform(df_vectorizer)\n",
+        "\n",
+        "df_components = pd.DataFrame(df_vect_pca)\n",
+        "\n",
+        "#Coded by Prudhvi"
+      ],
+      "metadata": {
+        "id": "vTJYonWdS9mT"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "component_ids = range(pca.n_components_)\n",
+        "cum_var = np.cumsum(pca.explained_variance_ratio_)\n",
+        "required_components = np.argmax(cum_var >= 0.799)+1\n",
+        "\n",
+        "plt.figure(figsize=(20,10))\n",
+        "plt.bar(component_ids, pca.explained_variance_ratio_)\n",
+        "plt.plot(component_ids, cum_var, color='red')\n",
+        "plt.axhline(y=0.799, color='gray', linestyle='--', linewidth=1)\n",
+        "plt.xticks(component_ids, rotation=90)\n",
+        "plt.ylabel('Variance Explained')\n",
+        "plt.xlabel('Principal Component')\n",
+        "plt.title('Figure 4.1 PC capturing ~80% Variance')\n",
+        "plt.annotate(f'{required_components} components for ~80% variance', xy=(required_components, 0.799), xytext=(required_components+1, 0.9))\n",
+        "plt.show()\n",
+        "\n",
+        "#Coded by Prudhvi"
+      ],
+      "metadata": {
+        "id": "mq29xra4S-Hg"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "After tokenization, we decided to do dimensionality reduction to capture at least 80% of the variance. This was done to further the cluster data and derive insights. It is not surprising to almost 80% of the variance in contained in just 160 components which is less than 1% (0.29%) of the features."
+      ],
+      "metadata": {
+        "id": "e6sarvBbTD3F"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "4W9xc98zTBh1"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
