--- a/BA820_G15_Final.ipynb
+++ b/BA820_G15_Final.ipynb
@@ -1367,13 +1367,45 @@
       }
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "##2.7 Clustering"
+      ],
+      "metadata": {
+        "id": "IHx2zNqxUPra"
+      }
+    },
+    {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "kmeans_res=KMeans(3,init='random').fit(df_components)\n",
+        "#Coded by Shailoz"
+      ],
       "metadata": {
         "id": "4W9xc98zTBh1"
       },
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "df_components['labels']=kmeans_res.labels_\n",
+        "df_components['labels'].value_counts()\n",
+        "#Coded by Shailoz"
+      ],
+      "metadata": {
+        "id": "93CrP6URUQWI"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [],
+      "metadata": {
+        "id": "U1yH0yuaUhmb"
+      }
     }
   ]
 }
