--- a/BA820_G15_Final.ipynb
+++ b/BA820_G15_Final.ipynb
@@ -1402,9 +1402,27 @@
     },
     {
       "cell_type": "markdown",
-      "source": [],
+      "source": [
+        "SENTIMENT ANALYSIS"
+      ],
       "metadata": {
         "id": "U1yH0yuaUhmb"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Using PCA we do clustering with 3 clusters using KMeans. Further we would build upon this to analyse sentiments, emotions, etc."
+      ],
+      "metadata": {
+        "id": "o71F7MyoU0x7"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [],
+      "metadata": {
+        "id": "ToyWvQHnU465"
       }
     }
   ]
